update form styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,237 @@ h1, h2, h3, h4 {
   color: #FF6A28;
 }
 
+.form {
+  background-color: #F8FAFB;
+}
+.form .wrapper {
+  display: flex;
+  column-gap: 63px;
+  position: relative;
+  justify-content: space-between;
+}
+
+.form__content {
+  max-width: 523px;
+  margin-top: 191px;
+  margin-bottom: 141px;
+}
+.form__content .form__title {
+  max-width: 624px;
+  font-size: 60px;
+}
+.form__content .form__text {
+  margin: 72px 0;
+  color: rgba(18, 18, 18, 0.83);
+  font-size: 24px;
+  line-height: 45.84px;
+}
+.form__content .form__line {
+  display: inline-block;
+  width: 312px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #FF6A28;
+}
+
+.form__card {
+  max-width: 585px;
+  width: 100%;
+  position: absolute;
+  top: 42px;
+  right: 0;
+  padding: 60px 37px 41px 38px;
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 32px 100px -100px rgb(66, 68, 90);
+  -moz-box-shadow: 2px 32px 100px -100px rgb(66, 68, 90);
+  box-shadow: 2px 32px 100px -100px rgb(66, 68, 90);
+  display: flex;
+  flex-direction: column;
+  row-gap: 34px;
+}
+.form__card label {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 4px;
+}
+.form__card label p {
+  color: rgba(18, 18, 18, 0.83);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 45.84px;
+}
+.form__card label input {
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 31px 34px;
+  background-color: #F8FAFB;
+  color: rgba(18, 18, 18, 0.5);
+  font-size: 20px;
+  line-height: 38.2px;
+  border-radius: 8px;
+}
+.form__card .submit__btn {
+  text-align: right;
+}
+.form__card .submit__btn .btn {
+  cursor: pointer;
+}
+
+@media (max-width: 1180px) {
+  .form {
+    padding-bottom: 141px;
+  }
+  .form .wrapper {
+    flex-direction: column;
+  }
+  .form .wrapper .form__card {
+    position: unset;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .form .wrapper .form__content {
+    max-width: 80%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .form .wrapper .form__content .form__title {
+    max-width: 100%;
+  }
+}
+@media (max-width: 900px) {
+  .form {
+    padding: 100px 0;
+  }
+  .form .wrapper {
+    row-gap: 100px;
+  }
+  .form .wrapper .form__content {
+    margin-top: 0;
+    max-width: 95%;
+    margin-bottom: 0;
+  }
+  .form .wrapper .form__content .form__title {
+    font-size: 50px;
+  }
+  .form .wrapper .form__content .form__text {
+    font-size: 22px;
+    margin: 60px 0;
+  }
+  .form .wrapper .form__card {
+    max-width: 700px;
+  }
+}
+@media (max-width: 768px) {
+  .form .wrapper .form__content .form__title {
+    font-size: 40px;
+  }
+  .form .wrapper .form__content .form__text {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 50px 0;
+  }
+  .form .wrapper .form__card {
+    max-width: 90%;
+  }
+  .form .wrapper .form__card label p {
+    font-size: 22px;
+  }
+  .form .wrapper .form__card label input {
+    font-size: 18px;
+  }
+  .form .wrapper .form__card .submit__btn .btn {
+    font-size: 18px;
+  }
+}
+@media (max-width: 576px) {
+  .form .wrapper {
+    row-gap: 50px;
+  }
+  .form .wrapper .form__content .form__title {
+    font-size: 30px;
+  }
+  .form .wrapper .form__content .form__text {
+    font-size: 18px;
+    margin: 40px 0;
+  }
+  .form .wrapper .form__content .form__line {
+    width: 250px;
+  }
+  .form .wrapper .form__card {
+    padding: 45px 25px 30px;
+  }
+  .form .wrapper .form__card label p {
+    font-size: 20px;
+  }
+  .form .wrapper .form__card label input {
+    font-size: 16px;
+    padding: 25px 28px;
+  }
+  .form .wrapper .form__card .submit__btn .btn {
+    font-size: 16px;
+  }
+}
+@media (max-width: 460px) {
+  .form {
+    padding: 60px 0;
+  }
+  .form .wrapper .form__content .form__title {
+    font-size: 25px;
+  }
+  .form .wrapper .form__content .form__text {
+    margin: 30px 0;
+    font-size: 14px;
+  }
+  .form .wrapper .form__content .form__line {
+    width: 40%;
+    height: 3px;
+  }
+  .form .wrapper .form__card {
+    max-width: 100%;
+    padding: 25px 20px;
+    row-gap: 20px;
+  }
+  .form .wrapper .form__card label p {
+    font-size: 16px;
+  }
+  .form .wrapper .form__card label input {
+    padding: 15px 20px;
+    font-size: 14px;
+  }
+  .form .wrapper .form__card .submit__btn .btn {
+    font-size: 14px;
+  }
+}
+@media (max-width: 300px) {
+  .form {
+    padding: 40px 0;
+  }
+  .form .wrapper .form__content .form__title {
+    font-size: 22px;
+  }
+  .form .wrapper .form__content .form__text {
+    margin: 20px 0;
+    font-size: 12px;
+    line-height: 20px;
+  }
+  .form .wrapper .form__card {
+    max-width: 100%;
+    row-gap: 15px;
+  }
+  .form .wrapper .form__card label p {
+    font-size: 14px;
+  }
+  .form .wrapper .form__card label input {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+  .form .wrapper .form__card .submit__btn .btn {
+    font-size: 12px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
