--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,132 +1,9 @@
 @use "./general";
 @use "./button";
 @use "./media";
-
-.heading {
-  h2 {
-    color: #121212;
-    font-family: Playfair Display;
-    font-size: 60px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-  .more {
-    margin-top: 9px;
-    display: flex;
-    align-items: center;
-    gap: 17px;
-    span {
-      color: rgba(18, 18, 18, 0.6);
-      font-family: Poppins;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 175%; /* 35px */
-    }
-    .line {
-      width: 67px;
-      height: 2px;
-      background-color: #ff6a28;
-    }
-  }
-}
-
-.we-work-part{
-    padding-bottom: 99px;
-}
-.work-cards{
-    margin-top: 39px;
-}
+@use "./wework";
+@use "./ourclients";
 
 
-.work-card {
-  &__img {
-    border-radius: 8px;
-    height: 210.67px;
-    background-color: #c4c4c4;
-  }
 
-  &__text {
-    .mini-card-heading{
-        margin: 28px 0 24px;
-        display: flex;
-        justify-content: space-between;
-        align-items: baseline;
-    }
-    h3 {
-      color: #121212;
-      font-family: Poppins;
-      font-size: 40px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-    }
-    span {
-      color: rgba(255, 106, 40, 0.7);
-      text-align: right;
-      font-family: Poppins;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 175%; /* 35px */
-    }
-    p {
-      color: rgba(18, 18, 18, 0.83);
-      text-align: justify;
-      font-family: Poppins;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 162.5%; /* 32.5px */
-    }
-  }
-}
 
-.our-clients {
-  background: #f8fafb;
-  padding: 56px 0 77px;
-}
-
-.clients-slider {
-  margin-top: 39px;
-  display: grid;
-  gap: 50px;
-  grid-template-columns: 1fr 1fr;
-}
-
-.client-img {
-  height: 416px;
-  background-color: #c4c4c4;
-  border-radius: 10px;
-}
-
-.client-info {
-  h2 {
-    color: #121212;
-    font-family: Poppins;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  h4 {
-    margin: 3px 0 34px;
-    color: rgba(18, 18, 18, 0.6);
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 175%; /* 35px */
-  }
-  p {
-    color: rgba(18, 18, 18, 0.83);
-    text-align: justify;
-    font-family: Poppins;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 191%; /* 45.84px */
-  }
-}
