--- a/assets/scss/_wework.scss
+++ b/assets/scss/_wework.scss
@@ -1,12 +1,9 @@
-.we-work-part{
-    padding-bottom: 99px;
+.we-work-part {
+  padding-bottom: 99px;
 }
-.work-cards{
-    margin-top: 39px;
-    
+.work-cards {
+  margin-top: 39px;
 }
-
-
 
 .work-card {
   &__img {
@@ -16,11 +13,11 @@
   }
 
   &__text {
-    .mini-card-heading{
-        margin: 28px 0 24px;
-        display: flex;
-        justify-content: space-between;
-        align-items: baseline;
+    .mini-card-heading {
+      margin: 28px 0 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
     }
     h3 {
       color: #121212;
@@ -48,5 +45,85 @@
       font-weight: 500;
       line-height: 162.5%; /* 32.5px */
     }
+  }
+}
+
+
+.we-work-part {
+  margin-top: 111px;
+}
+
+
+.work-cards{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 73px;
+}
+
+
+.wrapper {
+  margin-top: 39px;
+}
+
+
+.wrapper .carousel{
+  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 12px);
+  overflow-x: auto;
+  gap: 44px;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+.carousel .card {
+  
+  width: 316px;
+  scroll-snap-align: start;
+  // height: 342px;
+  // list-style: none;
+  // background: #fff;
+  cursor: pointer;
+  // padding-bottom: 15px;
+  // flex-direction: column;
+  // border-radius: 8px;
+}
+
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel.no-transition {
+  scroll-behavior: auto;
+}
+.carousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+.carousel.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+// .carousel :where(.card, .img) {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+
+.work-card{
+  width: 100%;
+}
+
+@media screen and (max-width: 900px) {
+  .wrapper .carousel {
+    grid-auto-columns: calc((100% / 2) - 9px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
   }
 }
