--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,11 @@
 @use "./general";
 @use "./button";
 @use "./media";
+
+// My-part--------
 @use "./wework";
 @use "./ourclients";
-
-
+@use "./heading";
+//------------
 
 
