--- a/assets/scss/_ourclients.scss
+++ b/assets/scss/_ourclients.scss
@@ -13,9 +13,7 @@
 .client-img {
   background-color: #c4c4c4;
   border-radius: 10px;
-  -webkit-box-shadow: 2px 32px 100px -100px rgba(66, 68, 90, 1);
-      -moz-box-shadow: 2px 32px 100px -100px rgba(66, 68, 90, 1);
-      box-shadow: 2px 32px 100px -100px rgba(66, 68, 90, 1);
+      
 }
 
 .client-info {
@@ -72,5 +70,16 @@
   i {
     color: #ff6a28;
     font-size: 20px;
+  }
+}
+
+
+@media (max-width:800px) {
+  .client-img{
+    height: 413px;
+    width: 100%;
+  }
+  .clients-slider{
+    grid-template-columns: 1fr;
   }
 }
