--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,352 @@ h1, h2, h3, h4 {
   color: #FF6A28;
 }
 
+.container {
+  padding: 48px 0;
+  text-align: center;
+}
+.container .showcase {
+  display: flex;
+  flex-direction: column;
+  gap: 41px;
+}
+.container .showcase h1 {
+  color: #121212;
+  text-align: center;
+  /* H1 */
+  font-family: Playfair Display;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  max-width: 1127px;
+  margin: 0 auto;
+}
+.container .showcase p {
+  color: rgba(18, 18, 18, 0.6);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 175%; /* 35px */
+  max-width: 956px;
+  margin: 0 auto;
+}
+.container .showcase button {
+  max-width: 196px;
+  margin: 0 auto;
+}
+.container .showcase .case {
+  padding: 11px 11px;
+  display: flex;
+  justify-content: space-between;
+  gap: 276px;
+  background-color: #c4c4c4;
+  border-radius: 10px;
+  position: relative;
+  width: 100%;
+  height: 1%;
+  flex-shrink: 0;
+}
+.container .showcase .case .box {
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.76);
+  backdrop-filter: blur(20px);
+  max-width: 419px;
+  max-height: 148px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 44px 58px 44px 38px;
+}
+.container .showcase .case .box .left p {
+  color: #ff6a28;
+  font-family: Poppins;
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.container .showcase .case .box .right p {
+  color: rgba(18, 18, 18, 0.83);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.container .showcase .case .box2 {
+  margin-top: 450px;
+}
+
+.btn0 {
+  display: inline-flex;
+  padding: 11px 29px 10px 28px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #ff6a28;
+  color: #FF6A28;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  background: none;
+}
+.btn0:hover {
+  background-color: #ff6a28;
+  color: #FFF;
+}
+
+header {
+  background: #fff;
+  padding: 54px 138px 50px 135px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+header .logo {
+  display: flex;
+  align-items: center;
+}
+header .logo a {
+  color: #121212;
+  font-family: "Playfair Display";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+header .lab {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+header .lab .menu {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+header .lab .menu li a {
+  color: rgba(18, 18, 18, 0.6);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-bottom: 2px solid white;
+}
+header .lab .menu li a:hover {
+  color: #121212;
+  border-bottom: 2px solid #ff6a28;
+}
+header nav {
+  display: none;
+}
+header nav i {
+  color: black;
+}
+header .switcher {
+  position: absolute;
+  visibility: hidden;
+  left: -9999px;
+}
+header label {
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+}
+header ul {
+  list-style-type: none;
+  display: flex;
+}
+
+@media (max-width: 1400px) {
+  body .container .showcase .case {
+    gap: 0;
+  }
+  body .container {
+    padding: 48px 138px;
+  }
+}
+@media (max-width: 1250px) {
+  body .container .showcase h1 {
+    font-size: 40px;
+    max-width: 956px;
+  }
+  body .container .showcase p {
+    font-size: 16px;
+    max-width: 700px;
+  }
+}
+@media (max-width: 1180px) {
+  body .container .showcase .case {
+    display: flex;
+    gap: 30px;
+  }
+  body .container .showcase .case .box2 {
+    margin-top: 100px;
+  }
+}
+@media (max-width: 1170px) {
+  body .container .showcase .case {
+    display: flex;
+    gap: 30px;
+  }
+  body .container .showcase .case .box2 {
+    margin-top: 10px;
+  }
+  body .container .showcase .case .box {
+    padding: 10px 5px;
+  }
+  body .container .showcase .case .box .right p {
+    font-size: 15px;
+    max-width: 160px;
+  }
+}
+@media (max-width: 1100px) {
+  body .container .showcase .case .box2 {
+    margin: 0;
+  }
+  body header .open {
+    display: block;
+  }
+  body header .close {
+    position: absolute;
+    top: 40px;
+    right: 10px;
+  }
+  body header .switcher:checked ~ nav {
+    display: block;
+    z-index: 1000;
+  }
+  body header .switcher:checked ~ nav {
+    right: 0;
+    transition: 1s;
+  }
+  body header .switcher:checked ~ .close {
+    display: block;
+    z-index: 1000;
+  }
+  body header .switcher:checked ~ .open {
+    display: none;
+  }
+  body header nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+    right: -100%;
+    top: 0;
+    text-align: center;
+    padding: 100px 0;
+    transition: 0.5s;
+  }
+  body header nav ul {
+    position: absolute;
+    top: 120px;
+    right: 15%;
+    gap: 15px;
+    background-color: #ffffff;
+    padding: 50px 30px;
+    border-radius: 80%;
+    box-shadow: 0 0 100px 1px white;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  body header nav ul i {
+    padding: 20px 10px;
+    cursor: pointer;
+  }
+  body header nav ul i:hover {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+    border-radius: 100%;
+  }
+  body header nav ul li {
+    border-radius: 80%;
+    padding: 5px 0;
+  }
+  body header nav ul li:hover {
+    transition: 0.8s;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+  }
+  body header nav ul a {
+    padding: 20px;
+    color: #121212;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  body header .lab {
+    display: none;
+  }
+}
+@media (max-width: 900px) {
+  body .container .showcase h1 {
+    font-size: 30px;
+  }
+  body .container .showcase p {
+    font-size: 14px;
+  }
+  body .container .showcase .case .box .right p {
+    font-size: 12px;
+  }
+  body .container .showcase .case {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  body .container .showcase .case .box {
+    margin: 0 auto;
+  }
+  body .container {
+    padding: 20px 100px;
+  }
+}
+@media (max-width: 550px) {
+  body header {
+    padding: 54px 80px;
+  }
+  body .container {
+    padding: 20px 60px;
+  }
+  body header .logo a {
+    font-size: 28px;
+  }
+}
+@media (max-width: 450px) {
+  body header {
+    padding: 54px 50px;
+  }
+  body .container {
+    padding: 20px 50px;
+  }
+}
+@media (max-width: 470px) {
+  body .container .showcase h1 {
+    font-size: 24px;
+  }
+  body .container .showcase p {
+    font-size: 12px;
+  }
+  body .container .showcase .case {
+    gap: 100px;
+  }
+  body header nav ul {
+    right: 5%;
+  }
+}
+@media (max-width: 370px) {
+  body header nav ul {
+    right: 3%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
