--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,21 +149,6 @@ h1, h2, h3, h4 {
   width: 100%;
 }
 
-@media screen and (max-width: 900px) {
-  .wrapper .carousel {
-    grid-auto-columns: calc(50% - 9px);
-  }
-}
-@media (max-width: 770px) {
-  .carousel .card {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 600px) {
-  .wrapper .carousel {
-    grid-auto-columns: 100%;
-  }
-}
 .our-clients {
   background: #f8fafb;
   padding: 56px 0 77px;
@@ -232,15 +217,23 @@ h1, h2, h3, h4 {
   font-size: 20px;
 }
 
-@media (max-width: 800px) {
-  .client-img {
-    height: 413px;
-    width: 100%;
-  }
-  .clients-slider {
-    grid-template-columns: 1fr;
-  }
+#slider-container {
+  width: 100%;
+  height: 100vh; /* or any other height you prefer */
+  overflow: hidden;
 }
+
+#slider {
+  display: flex;
+  width: 200%; /* Adjust based on the number of slides */
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  flex: 0 50%; /* Adjust based on the number of slides */
+  box-sizing: border-box;
+}
+
 .heading h2 {
   color: #121212;
   font-family: Playfair Display;
@@ -267,6 +260,54 @@ h1, h2, h3, h4 {
   width: 67px;
   height: 2px;
   background-color: #ff6a28;
+}
+
+@media screen and (max-width: 900px) {
+  .wrapper .carousel {
+    grid-auto-columns: calc(50% - 9px);
+  }
+}
+@media (max-width: 800px) {
+  .client-img {
+    height: 413px;
+    width: 100%;
+  }
+  .clients-slider {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 770px) {
+  .carousel .card {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .mini-card-heading h3 {
+    font-size: 30px;
+  }
+  .work-card__text p {
+    font-size: 15px;
+  }
+  .client-info h4 {
+    font-size: 14px;
+  }
+  .client-info p {
+    font-size: 18px;
+  }
+  .heading h2 {
+    font-size: 40px;
+  }
+  .heading span {
+    font-size: 10px;
+  }
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
+  }
+}
+@media (max-width: 350px) {
+  .heading h2 {
+    font-size: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
