--- a/assets/scss/_ourclients.scss
+++ b/assets/scss/_ourclients.scss
@@ -74,12 +74,20 @@
 }
 
 
-@media (max-width:800px) {
-  .client-img{
-    height: 413px;
-    width: 100%;
-  }
-  .clients-slider{
-    grid-template-columns: 1fr;
-  }
+#slider-container {
+  width: 100%;
+  height: 100vh; /* or any other height you prefer */
+  overflow: hidden;
+}
+
+#slider {
+  display: flex;
+  width: 200%; /* Adjust based on the number of slides */
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  flex: 0 50%; /* Adjust based on the number of slides */
+  box-sizing: border-box;
+
 }
