--- a/assets/scss/_ourclients.scss
+++ b/assets/scss/_ourclients.scss
@@ -76,7 +76,7 @@
 
 #slider-container {
   width: 100%;
-  height: 100vh; /* or any other height you prefer */
+  // height: 100vh; /* or any other height you prefer */
   overflow: hidden;
 }
 
