--- a/assets/scss/_media.scss
+++ b/assets/scss/_media.scss
@@ -46,7 +46,7 @@
         }
 
         span{
-            font-size: 10px;
+            font-size: 12px !important;
         }
     }
   .wrapper .carousel {
@@ -61,4 +61,36 @@
             font-size: 30px;
         }
     }
+}
+
+
+@media (max-width:300px) {
+  .mini-card-heading{
+    h3{
+      font-size: 18px;
+    }
+  }
+  .heading{
+    h2{
+      font-size: 22px;
+    }
+  }
+  .client-img{
+    height: 200px;
+  }
+  .client-info{
+    h2{
+      font-size: 18px;
+    }
+    p{
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+
+  .more{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+  }
 }
