--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,168 +49,6 @@ h1, h2, h3, h4 {
   color: #FF6A28;
 }
 
-.showcase {
-  display: flex;
-  flex-direction: column;
-  gap: 41px;
-  padding: 48px 135px;
-  text-align: center;
-}
-.showcase h1 {
-  color: #121212;
-  text-align: center;
-  /* H1 */
-  font-family: Playfair Display;
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  max-width: 1127px;
-  margin: 0 auto;
-}
-.showcase p {
-  color: rgba(18, 18, 18, 0.6);
-  text-align: center;
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 175%; /* 35px */
-  max-width: 956px;
-  margin: 0 auto;
-}
-.showcase button {
-  max-width: 196px;
-  margin: 0 auto;
-}
-.showcase .case {
-  padding: 11px 11px;
-  display: flex;
-  justify-content: space-between;
-  gap: 276px;
-  background-color: #c4c4c4;
-  border-radius: 10px;
-  position: relative;
-  width: 100%;
-  height: 1%;
-  flex-shrink: 0;
-}
-.showcase .case .box {
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.76);
-  backdrop-filter: blur(20px);
-  max-width: 419px;
-  max-height: 148px;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  padding: 44px 58px 44px 38px;
-}
-.showcase .case .box .left p {
-  color: #ff6a28;
-  font-family: Poppins;
-  font-size: 44px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.showcase .case .box .right p {
-  color: rgba(18, 18, 18, 0.83);
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.showcase .case .box2 {
-  margin-top: 450px;
-}
-
-.btn0 {
-  display: inline-flex;
-  padding: 11px 29px 10px 28px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  border: 1px solid #ff6a28;
-  color: #FF6A28;
-  font-family: Poppins;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  background: none;
-}
-.btn0:hover {
-  background-color: #ff6a28;
-  color: #FFF;
-}
-
-header {
-  background: #fff;
-  padding: 54px 138px 50px 135px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-}
-header .logo {
-  display: flex;
-  align-items: center;
-}
-header .logo a {
-  color: #121212;
-  font-family: "Playfair Display";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-header .lab {
-  display: flex;
-  align-items: center;
-  gap: 32px;
-}
-header .lab .menu {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-header .lab .menu li a {
-  color: rgba(18, 18, 18, 0.6);
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  border-bottom: 2px solid white;
-}
-header .lab .menu li a:hover {
-  color: #121212;
-  border-bottom: 2px solid #ff6a28;
-}
-header nav {
-  display: none;
-}
-header nav i {
-  color: black;
-}
-header .switcher {
-  position: absolute;
-  visibility: hidden;
-  left: -9999px;
-}
-header label {
-  font-size: 30px;
-  cursor: pointer;
-  display: none;
-}
-header ul {
-  list-style-type: none;
-  display: flex;
-}
-
 @media (max-width: 1400px) {
   body .showcase .case {
     gap: 0;
@@ -388,15 +226,211 @@ header ul {
   body header nav ul {
     right: 5%;
   }
+  body .showcase button {
+    font-size: 12px;
+    padding: 5px 8px;
+  }
 }
 @media (max-width: 370px) {
   body header nav ul {
     right: 3%;
+    padding: 40px 10px;
   }
   body .showcase .case .box {
     display: flex;
     flex-direction: column;
   }
+  body .showcase h1 {
+    font-size: 16px;
+  }
+  body .showcase p {
+    font-size: 11px;
+  }
+  body .showcase .case .box .left p {
+    font-size: 22px;
+  }
+}
+@media (max-width: 300px) {
+  body header nav ul {
+    padding: 40px 5px;
+  }
+  body .showcase .case .box .right p {
+    font-size: 10px;
+  }
+}
+@media (max-width: 280px) {
+  body header nav ul {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 20px;
+  }
+  body .showcase .case .box .left {
+    text-align: center;
+  }
+  body header .logo a {
+    font-size: 18px;
+  }
+}
+.showcase {
+  display: flex;
+  flex-direction: column;
+  gap: 41px;
+  padding: 48px 135px;
+  text-align: center;
+}
+.showcase h1 {
+  color: #121212;
+  text-align: center;
+  /* H1 */
+  font-family: Playfair Display;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  max-width: 1127px;
+  margin: 0 auto;
+}
+.showcase p {
+  color: rgba(18, 18, 18, 0.6);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 175%; /* 35px */
+  max-width: 956px;
+  margin: 0 auto;
+}
+.showcase button {
+  max-width: 196px;
+  margin: 0 auto;
+}
+.showcase .case {
+  padding: 11px 11px;
+  display: flex;
+  justify-content: space-between;
+  gap: 276px;
+  background-color: #c4c4c4;
+  border-radius: 10px;
+  position: relative;
+  width: 100%;
+  height: 1%;
+  flex-shrink: 0;
+}
+.showcase .case .box {
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.76);
+  backdrop-filter: blur(20px);
+  max-width: 419px;
+  max-height: 148px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 44px 58px 44px 38px;
+}
+.showcase .case .box .left p {
+  color: #ff6a28;
+  font-family: Poppins;
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.showcase .case .box .right p {
+  color: rgba(18, 18, 18, 0.83);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.showcase .case .box2 {
+  margin-top: 450px;
+}
+
+.btn0 {
+  display: inline-flex;
+  padding: 11px 29px 10px 28px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #ff6a28;
+  color: #FF6A28;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  background: none;
+}
+.btn0:hover {
+  background-color: #ff6a28;
+  color: #FFF;
+}
+
+header {
+  background: #fff;
+  padding: 54px 138px 50px 135px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+header .logo {
+  display: flex;
+  align-items: center;
+}
+header .logo a {
+  color: #121212;
+  font-family: "Playfair Display";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+header .lab {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+header .lab .menu {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+header .lab .menu li a {
+  color: rgba(18, 18, 18, 0.6);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-bottom: 2px solid white;
+}
+header .lab .menu li a:hover {
+  color: #121212;
+  border-bottom: 2px solid #ff6a28;
+}
+header nav {
+  display: none;
+}
+header nav i {
+  color: black;
+}
+header .switcher {
+  position: absolute;
+  visibility: hidden;
+  left: -9999px;
+}
+header label {
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+}
+header ul {
+  list-style-type: none;
+  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
